--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
 body {
   font-family: "Poppins", sans-serif;
   line-height: 1;
-  background-image: url(img/12965263_abstract_background_with_flowing_particles_design_1609.jpg);
+  background-image: url(img/background.jpg);
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
