--- a/style.css
+++ b/style.css
@@ -125,6 +125,13 @@ a {
   color: #fff !important;
 }
 
+/* removendo as setas do input number */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
 .form-control {
   background: none !important;
   border-radius: 0px !important;
@@ -137,6 +144,20 @@ a {
 
 .form-control::placeholder {
   color: #adadad !important;
+}
+
+.loading {
+  width: 35px;
+  animation: spin 1s infinite;
+}
+
+@keyframes spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
 }
 
 #emailHelp {
